# bio-finder

./: .gitignore  README.md  biocontainer_server.py  biofinder  biofinder_client.py  biofinder_server.py  build-modules.sh  client.py  cvmfs_module_builder.py  play.ipynb  pyproject.toml  server.py  setup.sh
bio-mcp/: pyproject.toml  server.py
data/: EDAM.obo  README.md  scrnaseq_biotools.yaml
docs/: COMMAND_REFERENCE.md  DEVELOPER_REFERENCE.md
docs/setup.md/: developer.md  running.md  setup.md
src/bio_mcp/: globals.py
src/bio_mcp/cache/: build_cache.py  embeddings.py  load.py  schema.py
src/bio_mcp/cvmfs/: models.py  scan_repo.py
src/bio_mcp/mcp/: client.py  prompts.py  server.py
